--- a/redflix45 project/InitializrSpringbootProject/src/main/resources/application.properties
+++ b/redflix45 project/InitializrSpringbootProject/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://181.58.185.101:3306/redflix45?serverTimezone=UTC
-spring.datasource.username=G2M2E1
-spring.datasource.password=equipo167
+spring.datasource.url=jdbc:mysql://localhost:3306/redflixtest?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
