GUI Actualizada - Proyecto Funcional

--- a/redflix45 project/InitializrSpringbootProject/pom.xml
+++ b/redflix45 project/InitializrSpringbootProject/pom.xml
@@ -42,6 +42,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+	 <dependency>
+	  <groupId>org.netbeans.external</groupId>
+	  <artifactId>AbsoluteLayout</artifactId>
+	  <version>RELEASE121</version>
+	 </dependency>
 	</dependencies>
 
 	<build>
